--- a/style.css
+++ b/style.css
@@ -20,7 +20,61 @@ body {
 .header {
     width: 100%;
     height: 150px;
-    background: red;
+    position: relative;
+    overflow: hidden;
+}
+
+.header .ab {
+    width: 100%;
+    height: 40px;
+    position: absolute;
+    left: 0;
+    top: 20px;
+    z-index: 999;
+    padding: 0 10px;
+}
+
+.f {
+    position: absolute;
+    left: 4rem;
+    top: 10px;
+}
+
+.header .ab span {
+    width: 32px;
+    height: 32px;
+    display: inline-block;
+    text-align: center;
+    line-height: 32px;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    background: rgba(255, 255, 255, .7);
+    margin-right: 10px;
+}
+
+.header .ab input {
+    width: calc(100% - 70px - 32px);
+    outline: none;
+    height: 30px;
+    border-radius: 15px;
+    border: 1px solid #ccc;
+    background: rgba(255, 255, 255, .7);
+    padding-left: 30px;
+}
+
+.header .one {
+    width: 100%;
+    height: 100%;
+}
+
+.header .one .swiper-slide {
+    width: 100%;
+    height: 100%;
+}
+
+.header .one .swiper-slide>img {
+    width: 100%;
+    height: 100%;
 }
 
 .section {
